git path changed

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <div class="flex items-center">
             <a href="#" class="flex items-center space-x-2 text-white">
               <img
-                src="images/Sprout Media Official Logo-05.png"
+                src="/images/Sprout Media Official Logo-05.png"
                 alt=""
                 class="h-10"
               />
               <span class="ml-6">x</span>
-              <img src="images/skill-logo.png" alt="" class="h-16" />
+              <img src="/images/skill-logo.png" alt="" class="h-16" />
             </a>
           </div>
 
@@ -87,12 +87,12 @@
               >
                 <a href="#agenda" class="menu-item font-body" class="flex">
                   <img
-                    src="images/Sprout Media Official Logo-05.png"
+                    src="/images/Sprout Media Official Logo-05.png"
                     class="h-10"
                     alt=""
                   />
                   <span class="ml-4">x</span>
-                  <img src="images/skill-logo.png" class="h-16" alt="" />
+                  <img src="/images/skill-logo.png" class="h-16" alt="" />
                 </a>
                 <a href="#agenda" class="menu-item font-body">
                   <svg
