path changes of images
relative path changes

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <div class="flex items-center">
             <a href="#" class="flex items-center space-x-2 text-white">
               <img
-                src="/images/Sprout Media Official Logo-05.png"
+                src="/workshop-lp/images/Sprout Media Official Logo-05.png"
                 alt=""
                 class="h-10"
               />
               <span class="ml-6">x</span>
-              <img src="/images/skill-logo.png" alt="" class="h-16" />
+              <img src="/workshop-lp/images/skill-logo.png" alt="" class="h-16" />
             </a>
           </div>
 
@@ -87,12 +87,12 @@
               >
                 <a href="#agenda" class="menu-item font-body" class="flex">
                   <img
-                    src="/images/Sprout Media Official Logo-05.png"
+                    src="/workshop-lp/images/Sprout Media Official Logo-05.png"
                     class="h-10"
                     alt=""
                   />
                   <span class="ml-4">x</span>
-                  <img src="/images/skill-logo.png" class="h-16" alt="" />
+                  <img src="/workshop-lp/images/skill-logo.png" class="h-16" alt="" />
                 </a>
                 <a href="#agenda" class="menu-item font-body">
                   <svg
@@ -226,7 +226,7 @@
       class="relative bg-brand-dark flex flex-col items-center justify-center px-0 sm:px-0 lg:px-0 mt-6 lg:mt-20 lg:pt-2"
     >
       <div
-        class="h-[50vh] sm:h-[90vh] w-full bg-contain sm:bg-cover bg-no-repeat bg-center bg-[url('/images/banner-img-mobile.webp')] md:bg-[url('/images/banner-img.webp')]"
+        class="h-[50vh] sm:h-[90vh] w-full bg-contain sm:bg-cover bg-no-repeat bg-center bg-[url('/workshop-lp/images/banner-img-mobile.webp')] md:bg-[url('/workshop-lp/images/banner-img.webp')]"
       ></div>
 
       <div class="relative z-10 max-w-5xl pt-0 sm:pt-24 mx-auto text-center">
